# advent_of_code_2024

./: Cargo.toml  README.md
src/: inp.rs  lib.rs  point.rs
