[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["raymond <dolanraymond416@gmail.com>"]
edition = "2018"

[lib]
name = "advent_of_code_2024"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
petgraph = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
nalgebra = "0.33.2"
